修改网关包路径